# ZeroOS

./: .gitignore  Cargo.toml  build-c-smoke.sh  build-fibonacci.sh  build-std-smoke.sh  build-syscall-cycles.sh  matrix.yaml  release-plz.toml
.github/actions/install-base/: action.yml
.github/workflows/: ci.yml  publish-musl-toolchain.yml  publish-spike.yml
crates/cargo-matrix/: Cargo.toml
crates/htif/: Cargo.toml
crates/mini-template/: Cargo.toml
crates/mini-template/src/: lib.rs
crates/zeroos/: Cargo.toml
crates/zeroos-arch-riscv/src/: ops.rs
crates/zeroos-build/: Cargo.toml
crates/zeroos-build/src/: lib.rs  linker.rs  main.rs
crates/zeroos-build/src/cmds/: build.rs  linker.rs  target.rs
crates/zeroos-build/src/files/: generic-linux.json.template  linker.ld.template  musl-toolchain.sh
crates/zeroos-build/src/host/: backtrace.rs
crates/zeroos-build/src/spec/: mod.rs  utils.rs
crates/zeroos-build/src/toolchain/: install.rs  mod.rs
crates/zeroos-device-console/src/: lib.rs
crates/zeroos-device-null/src/: lib.rs
crates/zeroos-device-urandom/src/: lib.rs
crates/zeroos-device-zero/src/: lib.rs
crates/zeroos-foundation/: Cargo.toml
crates/zeroos-foundation/src/: ioctl.rs  lib.rs  user_ptr.rs
crates/zeroos-foundation/src/kfn/: arch.rs
crates/zeroos-runtime-gnu/: Cargo.toml
crates/zeroos-runtime-musl/: Cargo.toml
crates/zeroos-runtime-musl/src/: eh_frame_register.rs  lib.rs  stack.rs
crates/zeroos-runtime-musl/src/riscv64/: bootstrap.rs
crates/zeroos-vfs-core/src/: device.rs  lib.rs  vfs.rs
crates/zeroos/src/: lib.rs
doc/: ioctl_cmd.md
docs/: publish-workflow.md
examples/c-smoke/rust/: Cargo.toml
examples/fibonacci/: Cargo.toml
examples/std-smoke/: Cargo.toml
examples/syscall-cycles/: Cargo.toml  README.md
scripts/: spike-builder
xtask/: Cargo.toml
xtask/src/: check_workspace.rs  main.rs
