[package]
name = "xtask"
publish = false
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap-cargo.workspace = true
log.workspace = true
derive_builder.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
cargo-matrix.workspace = true
anyhow.workspace = true
walkdir.workspace = true
toml.workspace = true
cargo_toml.workspace = true
