[package]
name = "zeroos-foundation"
version.workspace = true
edition.workspace = true
description = "ZeroOS foundation layer - the bedrock runtime, registry, and coordination that everything builds upon"

[lib]
name = "foundation"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
cfg-if.workspace = true
libc.workspace = true
debug.workspace = true

[features]
default = []

debug = ["debug/debug"]

# Subsystem features
memory = []
scheduler = []
trap = []
vfs = []
random = []
arch = []

# Boot mode selection
std = []
libc-main = []
