[package]
name = "zeroos-runtime-gnu"
publish = false
version.workspace = true
edition.workspace = true
description = "GNU libc (glibc) compatibility layer for ZeroOS"

[lib]
name = "zeroos_runtime_gnu"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# No dependencies - this is a thin compatibility layer
