[package]
name = "zeroos-runtime-musl"
version.workspace = true
edition.workspace = true
description = "Musl libc compatibility layer for ZeroOS"

[lib]
name = "zeroos_runtime_musl"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
debug.workspace = true
foundation.workspace = true

[features]
default = []
debug = ["debug/debug"]
bounds-checks = []
backtrace = []
