[package]
name = "zeroos"
version.workspace = true
edition.workspace = true
description = "ZeroOS - Kernel framework facade with auto-wiring"

[lib]
name = "zeroos"
path = "src/lib.rs"

[features]
default = []

debug = [
  "debug/debug",
  "foundation/debug",
  "arch-riscv?/debug",
  "runtime-musl?/debug",
]
bounds-checks = ["runtime-musl?/bounds-checks"]

# Architecture
arch-riscv = [
  "dep:arch-riscv",
  "foundation/arch",
  "scheduler-cooperative?/riscv",
]

# OS
os-linux = ["dep:os-linux", "foundation/trap"]

# Runtime
runtime-nostd = ["dep:runtime-nostd"]
runtime-musl = ["dep:runtime-musl"]
runtime-gnu = ["dep:runtime-gnu"]

# Backtraces
backtrace = ["runtime-musl?/backtrace"]

# Capabilities
## Memory
memory = ["foundation/memory", "runtime-nostd?/memory", "os-linux?/memory"]
alloc-linked-list = ["memory", "dep:allocator-linked-list"]
alloc-buddy = ["memory", "dep:allocator-buddy"]
alloc-bump = ["memory", "dep:allocator-bump"]

## VFS
vfs = ["dep:vfs-core", "foundation/vfs", "os-linux?/vfs"]
vfs-device-console = ["vfs", "dep:device-console"]
vfs-device-null = ["vfs", "dep:device-null"]
vfs-device-zero = ["vfs", "dep:device-zero"]
vfs-device-urandom = ["vfs", "random", "dep:device-urandom"]

## Scheduler
scheduler = ["foundation/scheduler", "os-linux?/scheduler"]
scheduler-cooperative = ["scheduler", "dep:scheduler-cooperative"]

## Random
random = ["foundation/random", "os-linux?/random"]
rng-lcg = ["random", "dep:rng", "rng/lcg"]
rng-chacha = ["random", "dep:rng", "rng/chacha"]

[dependencies]
debug = { workspace = true }
zeroos-macros.workspace = true
foundation = { workspace = true }
arch-riscv = { workspace = true, optional = true }
os-linux = { workspace = true, optional = true }

runtime-nostd = { workspace = true, optional = true }
runtime-musl = { workspace = true, optional = true }
runtime-gnu = { workspace = true, optional = true }

allocator-linked-list = { workspace = true, optional = true }
allocator-buddy = { workspace = true, optional = true }
allocator-bump = { workspace = true, optional = true }

vfs-core = { workspace = true, optional = true }
device-console = { workspace = true, optional = true }
device-null = { workspace = true, optional = true }
device-zero = { workspace = true, optional = true }
device-urandom = { workspace = true, optional = true }

scheduler-cooperative = { workspace = true, optional = true }

rng = { workspace = true, optional = true }

[target.'cfg(target_os = "none")'.dependencies]
runtime-nostd = { workspace = true }
