[package]
name = "std-smoke"
version.workspace = true
edition.workspace = true

[dependencies]
platform.workspace = true
zeroos.workspace = true
debug.workspace = true
cfg-if.workspace = true
rayon.workspace = true
libc.workspace = true

[features]
default = ["with-spike", "memory"]

with-spike = ["platform/with-spike"]
std = [
  "with-spike",
  "platform/std",
  "debug",
  "memory",
  "vfs",
  "bounds-checks",
  "thread",
]
debug = ["platform/debug"]
memory = ["platform/memory"]
vfs = ["platform/vfs"]
bounds-checks = ["platform/bounds-checks"]
thread = ["platform/thread"]
backtrace = ["platform/backtrace"]

[[bin]]
name = "std-smoke"
path = "src/main.rs"


